tests/snapshots/options__opt_with_nth_neg_2.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> f3,                                                                           "
"  1/1                                                                        0/0"
">                                                                               "
