tests/snapshots/options__opt_with_nth_oob_4.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (2, 23)
