tests/snapshots/options__opt_with_nth_oob_4@001.snap
---
source: tests/options.rs
description: "input: items [\"f1,f2,f3,f4\"]\noptions: --delimiter , --with-nth=-5"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
