tests/snapshots/options__opt_with_nth_preview.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                        │Xf1Y                                   "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> f2,f3,f4                              │                                       "
"  1/1                                0/0│                                       "
">                                       │                                       "
cursor: (2, 23)
